# dleyna-core

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac  dleyna-core-1.0.pc.in  meson.build  meson_options.txt
doc/: TODO.txt  coding-style.txt  logging.txt
libdleyna/core/: connector-mgr.c  connector-mgr.h  connector.h  control-point.h  core.c  core.h  error.c  error.h  log.c  log.h  main-loop.c  main-loop.h  meson.build  service-task.c  service-task.h  settings.c  settings.h  task-atom.h  task-processor.c  task-processor.h  white-list.c  white-list.h
m4/: compiler-flags.m4  log.m4
src/: connector-mgr.h  connector.h  control-point.h  error.c  log.c  main-loop.c  main-loop.h  settings.h  task-processor.h
